[package]
name = "actix-for-mini"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
dotenv_codegen = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.21"
mysql = "25.0.0"
ocrs-cli = "0.8.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
utoipa = { version = "4.2.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.0.3", features = ["actix-web"] }
utils_type = { path = "./utils_type" }
